# sergeant

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  notes.txt  output.txt  test_works_in_iterm.txt  websocket.html  websocket.js
commands/intros/: Cargo.toml  intros.db
commands/intros/.sqlx/: query-929f68fc74aee9c129a68ae7bc60f82b3b04d341dae68ec4ac86878b23d0da59.json  query-dab7fcc87ff8e250343c9ce33bcdf46e507ed36b920cc7a693d7dda3ef4df323.json
commands/intros/production/: intros.db-shm
commands/intros/production/migrations/: 20240505085547_050524.sql
commands/intros/src/: db.rs  main.rs  set.rs
commands/lib/: Cargo.toml
commands/lib/src/: fs.rs
commands/set_intro/: Cargo.toml
commands/set_intro/.sqlx/: query-7c7d1e13268175e723e9352b1b1a64097083754cba9a0c061556650c8f60476f.json
commands/set_intro/migrations/: 20240505084307_050524.sql
commands/set_intro/production/: intros.db  intros.db-wal
commands/set_intro/production/migrations/: 20240505090002_050524.sql
commands/set_intro/src/: main.rs  play.rs  set.rs  tests_main.rs
commands/spotify/: Cargo.toml
commands/spotify/src/: login.rs  main.rs  queue.rs  song.rs
fixtures/: message_with_emotes.txt
reference/: messages.snippets  messages.txt  snippets.rs
src/: lib.rs  main.rs  twitch.rs
src/admin/: mod.rs
src/admin/components/: actions_view.rs  announcements.rs  app.rs  cmd_name_input.rs  cmd_output_input.rs  commands_view.rs  edit_input.rs  info_view.rs  inputs.rs  list_view.rs  list_view_reference.rs  mod.rs  rewards_view.rs
src/admin/components/floating/: add_action.rs  add_announcement.rs  add_command.rs  add_reward.rs  confirm.rs  edit_action.rs  edit_announcement.rs  edit_command.rs  edit_reward.rs  error.rs  mod.rs
src/admin/messages/: mod.rs
src/admin/templates/: announcements_list_view.aml  app.aml  commands_view.aml  info_view.aml  list_view.aml  mod.rs
src/admin/templates/floating/: add_action.aml  add_announcement.aml  add_command.aml  add_reward.aml  confirm.aml  edit_action.aml  edit_announcement.aml  edit_command.aml  edit_reward.aml  error.aml
src/commands/: mod.rs
src/eventsub/: mod.rs  notifications.rs  structs.rs  subscriptions.rs
src/interface/: args.rs  cli.rs
src/output/: mod.rs
src/scrollview/: mod.rs  scroll_view.rs  state.rs
src/tui/: mod.rs  test_messages.rs  todos.txt
src/twitch/: announcements.rs  api.rs  client.rs  fixtures.rs  irc.rs  message.rs  messages.rs  mod.rs  parse.rs  pubsub.rs
src/utils/: mod.rs
src/websocket/: mod.rs
