[package]
name = "sergeant"
version = "0.7.0"
edition = "2021"
description = "Sergeant is a terminal based Twitch chat widget and bot in one. It will display the Twitch chat from your channel in terminal while also allowing you to add chat bot commands."
license = "MIT OR Apache-2.0"
repository = "https://github.com/s9tpepper/sergeant"
keywords = ["twitch", "chat", "bot"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
clap = { version = "4.5.1", features = ["derive", "env", "cargo"] }
color-eyre = "0.6.3"
color-name = "1.1.0"
colored = "2.1.0"
crossterm = "0.27.0"
directories = "5.0.1"
dotenv = { version = "0.15.0", features = ["cli", "clap"] }
features = "0.10.0"
full = "0.1.0"
hex-rgb = "0.1.1"
image = "0.25.0"
openssl = "0.10.63"
ratatui = "0.26.2"
serde = { version = "1.0.196", features = ["alloc", "derive", "serde_derive"] } 
serde_json = "1.0.113"
tungstenite = { version = "0.21.0", features = ["native-tls"] }
ureq = { version = "2.9.6", features = ["json"] }
url = "2.5.0"
uuid = "1.7.0"
