[package]
name = "sergeant"
version = "0.9.0"
edition = "2021"
description = "Sergeant is a terminal based Twitch chat widget and bot in one. It will display the Twitch chat from your channel in terminal while also allowing you to add chat bot commands."
license = "MIT OR Apache-2.0"
repository = "https://github.com/s9tpepper/sergeant"
keywords = ["twitch", "chat", "bot"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.7", features = ["derive", "env", "cargo"] }
color-eyre = "0.6.3"
color-name = "1.1.0"
colored = "2.1.0"
crossterm = "0.27.0"
descape = "1.1.2"
directories = "5.0.1"
dotenv = { version = "0.15.0", features = ["cli", "clap"] }
features = "0.10.0"
full = "0.1.0"
hex-rgb = "0.1.1"
image = "0.25.1"
openssl = "0.10.64"
ratatui = "0.26.3"
serde = { version = "1.0.203", features = ["alloc", "derive", "serde_derive"] } 
serde_json = "1.0.117"
time = "0.3.36"
tungstenite = { version = "0.23.0", features = ["native-tls"] }
ureq = { version = "2.9.7", features = ["json"] }
url = "2.5.1"
uuid = "1.8.0"
