[package]
name = "sergeant"
version = "0.11.0"
edition = "2021"
description = "Sergeant is a terminal based Twitch chat widget and bot in one. It will display the Twitch chat from your channel in terminal while also allowing you to add chat bot commands."
license = "MIT OR Apache-2.0"
repository = "https://github.com/s9tpepper/sergeant"
keywords = ["twitch", "chat", "bot"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "commands/intros",
  "commands/spotify"
]


[dependencies]
anathema = { git = "https://github.com/s9tpepper/anathema.git", branch = "dev"  }
base64 = "0.22.1"
clap = { version = "4.5.20", features = ["derive", "env", "cargo"] }
color-eyre = "0.6.3"
color-name = "1.1.0"
colored = "2.1.0"
crossterm = "0.28.1"
descape = "2.0.3"
directories = "5.0.1"
dotenv = { version = "0.15.0", features = ["cli", "clap"] }
features = "0.10.0"
full = "0.3.0"
hex-rgb = "0.1.1"
image = "0.25.1"
ratatui = "0.29.0"
serde = { version = "1.0.203", features = ["alloc", "derive", "serde_derive"] }
serde_json = "1.0.117"
time = "0.3.36"
tungstenite = { version = "0.24.0", features = ["native-tls"] }
ureq = { version = "2.9.7", features = ["json"] }
url = "2.5.1"
uuid = "1.8.0"
